# fvault

./: Cargo.toml  README.md
src/: copy.rs  cx.rs  hash.rs  lib.rs  limit_read.rs  pack.rs  path.rs
src/cli/: db.rs  index.rs  main.rs  mod.rs  pack.rs  path.rs  tree.rs
src/db/: mod.rs  val.rs
src/index/: mod.rs  tree.rs
